[package]
name = "haunted-coop"
version = "0.1.0"
edition = "2021"
description = "The Haunted Coop Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.7"
futures = "0.3.21"
tracing-subscriber = "0.3.10"
tokio-io = "0.1.13"
tokio-io-timeout = "1.2.0"
tokio-stream-ext = "0.1.5"
bytes = "1.1.0"
byteorder = "1.4.3"

[dependencies.tracing]
version = "0.1.32"
features = ["async-await"]

[dependencies.tokio-util]
version = "0.7.1"
features = ["full"]

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dependencies.tokio]
version = "1.17.0"
features = ["default", "rt-multi-thread", "macros"]

[dependencies.clap]
version = "3.1.8"
features = ["derive"]
