[package]
name = "haunted-coop"
version = "0.1.0"
edition = "2021"
description = "The Haunted Coop Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "*"
futures = "*"
tracing-subscriber = "*"
tokio-io = "*"
tokio-io-timeout = "*"
tokio-stream-ext = "*"
bytes = "*"
byteorder = "*"
num_cpus = "*"

[dependencies.tracing]
version = "*"
features = ["async-await"]

[dependencies.tokio-util]
version = "*"
features = ["full"]

[dependencies.async-std]
version = "*"
features = ["attributes"]

[dependencies.tokio]
version = "*"
features = ["default", "rt-multi-thread", "macros", "num_cpus"]

[dependencies.clap]
version = "*"
features = ["derive"]
