[package]
name = "haunted-coop"
version = "0.1.0"
edition = "2024"
description = "The Haunted Coop Server"

[dependencies]
num_enum = "*"
futures = "*"
tracing-subscriber = "*"
tokio-io-timeout = "*"
bytes = "*"
byteorder = "*"
num_cpus = "*"
parking_lot = "*"

[dependencies.tracing]
version = "*"
features = ["async-await"]

[dependencies.tokio-util]
version = "*"
features = ["full"]

[dependencies.tokio]
version = ">=1.0.0"
features = ["default", "rt-multi-thread", "macros", "num_cpus"]

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.reqwest]
version = "*"
features = ["json"]

[dev-dependencies]
ntest = "*"
